# build

./: .gitignore  configure  configure.ps1  makefile
src/: gde.cmake
src/cmake/example/: configure  configure.cmd  configure.ps1
src/cmake/example/src/: CMakeLists.txt
src/cmake/example/src/example/: CMakeLists.txt
src/cmake/example/src/example-console/: CMakeLists.txt  main.cpp
src/cmake/example/src/example-window/: version.cpp
src/cmake/example/src/example/one/: a.cpp  a.h  b.cpp  b.h  b.t.cpp
src/cmake/example/src/example/two/: a.cpp  a.h  b.h  b.t.cpp
src/cmake/example/src/executable/example-console/: CMakeLists.txt  main.cpp  version.h  version.t.cpp
src/cmake/module/: gde.cmake
src/cmake/template/: gde.pc
src/cmake/toolchain/: default.cmake  gcc.cmake  msvc.cmake
src/cmake/toolchain/clang/: darwin.cmake
